ecsdb/src/query/snapshots/ecsdb__query__ir__test__filter_expression_sql_query@WithComponentData("ecsdb::Test", Null).simplify().sql_query().snap
---
source: ecsdb/src/query/ir.rs
description: "WithComponentData(\"ecsdb::Test\", Null).simplify().sql_query()"
---
SqlFragment<ecsdb::query::ir::Select> {
    sql: "select entity from components where (component = :1 and data is null)",
    placeholders: [
        (
            ":1",
            Text(
                "ecsdb::Test",
            ),
        ),
    ],
}
