ecsdb/src/query/snapshots/ecsdb__query__ir__test__filter_expression_sql_query@WithoutComponent("ecsdb::Test").simplify().sql_query().snap
---
source: ecsdb/src/query/ir.rs
description: "WithoutComponent(\"ecsdb::Test\").simplify().sql_query()"
---
SqlFragment<ecsdb::query::ir::Select> {
    sql: "select distinct entity from components where (select true from components c2 where c2.entity = components.entity and c2.component = ?1) is null",
    placeholders: [
        (
            "?1",
            Text(
                "ecsdb::Test",
            ),
        ),
    ],
}
