ecsdb/src/query/snapshots/ecsdb__query__ir__test__filter_expression_where_clause@And([WithComponent("ecsdb::A"), Or([WithComponent("ecsdb::B"), WithComponent("ecsdb::C")])]).where_clause().snap
---
source: ecsdb/src/query/ir.rs
description: "And([WithComponent(\"ecsdb::A\"), Or([WithComponent(\"ecsdb::B\"), WithComponent(\"ecsdb::C\")])]).where_clause()"
---
SqlFragment<ecsdb::query::ir::Where> {
    sql: "((select true from components c2 where c2.entity = components.entity and c2.component = :1) and ((select true from components c2 where c2.entity = components.entity and c2.component = :2) or (select true from components c2 where c2.entity = components.entity and c2.component = :3)))",
    placeholders: [
        (
            ":1",
            Text(
                "ecsdb::A",
            ),
        ),
        (
            ":2",
            Text(
                "ecsdb::B",
            ),
        ),
        (
            ":3",
            Text(
                "ecsdb::C",
            ),
        ),
    ],
}
